fixed image spacing for all screen sizes on portfolio

--- a/style.css
+++ b/style.css
@@ -100,9 +100,9 @@ body {
     transition-delay:.2s;
     }
 
-    .tall-image {
-        object-fit: none; 
+    .center-image {
+        object-fit: cover; 
         object-position: center; /* Center the image within the element */
         width: 100%;
-        max-height: 650px;
+        max-height: 200%;
       }
